src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Complaint_Reason2__c</fullName>
        <description>The last level of case classification.</description>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Complaint_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Academy/Loyalty</fullName>
                    <color>#33FFFF</color>
                    <label>Academy/Loyalty</label>
                </value>
                <value>
                    <fullName>Account maintenance</fullName>
                    <color>#FF9900</color>
                    <label>Account maintenance</label>
                </value>
                <value>
                    <fullName>Account set up</fullName>
                    <color>#003300</color>
                    <label>Account set up</label>
                </value>
                <value>
                    <fullName>Account set up issues</fullName>
                    <color>#000000</color>
                    <label>Account set up issues</label>
                </value>
                <value>
                    <fullName>Assist with order placement</fullName>
                    <color>#FF99FF</color>
                    <label>Assist with order placement</label>
                </value>
                <value>
                    <fullName>Backorder follow up</fullName>
                    <color>#CC66CC</color>
                    <label>Backorder follow up</label>
                </value>
                <value>
                    <fullName>Break-Fix</fullName>
                </value>
                <value>
                    <fullName>Cancelled order</fullName>
                    <color>#CC33CC</color>
                    <label>Cancelled order</label>
                </value>
                <value>
                    <fullName>Carrier late delivery</fullName>
                    <color>#993399</color>
                    <label>Carrier late delivery</label>
                </value>
                <value>
                    <fullName>Carrier lost package</fullName>
                    <color>#663366</color>
                    <label>Carrier lost package</label>
                </value>
                <value>
                    <fullName>CEREC direct connect</fullName>
                    <color>#666666</color>
                    <label>CEREC direct connect</label>
                </value>
                <value>
                    <fullName>Courtesy Credit</fullName>
                    <color>#78C953</color>
                    <label>Courtesy Credit</label>
                </value>
                <value>
                    <fullName>Crash</fullName>
                    <color>#E27001</color>
                    <label>Crash</label>
                </value>
                <value>
                    <fullName>Credit</fullName>
                    <color>#990000</color>
                    <label>Credit</label>
                </value>
                <value>
                    <fullName>Customer notes not followed</fullName>
                    <color>#009900</color>
                    <label>Customer notes not followed</label>
                </value>
                <value>
                    <fullName>Customer payment</fullName>
                    <color>#339999</color>
                    <label>Customer payment</label>
                </value>
                <value>
                    <fullName>Customer training</fullName>
                    <color>#3333FF</color>
                    <label>Customer training</label>
                </value>
                <value>
                    <fullName>Delay in Finance order release</fullName>
                    <color>#6600CC</color>
                    <label>Delay in Finance order release</label>
                </value>
                <value>
                    <fullName>Delivered to Incorrect Address</fullName>
                    <color>#A845DC</color>
                    <label>Delivered to Incorrect Address</label>
                </value>
                <value>
                    <fullName>Duplicated Order</fullName>
                    <color>#F3D904</color>
                    <label>Duplicated Order</label>
                </value>
                <value>
                    <fullName>Excessive phone wait time</fullName>
                    <color>#6633FF</color>
                    <label>Excessive phone wait time</label>
                </value>
                <value>
                    <fullName>Excessive wait time for approval</fullName>
                    <color>#3366FF</color>
                    <label>Excessive wait time for approval</label>
                </value>
                <value>
                    <fullName>General inquiry</fullName>
                    <color>#00CCCC</color>
                    <label>General inquiry</label>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                    <color>#33CC00</color>
                    <label>Hardware</label>
                </value>
                <value>
                    <fullName>Incorrect Account Details</fullName>
                </value>
                <value>
                    <fullName>Incorrect Account Number</fullName>
                    <color>#641CCF</color>
                    <label>Incorrect Account Number</label>
                </value>
                <value>
                    <fullName>Incorrect Article/s</fullName>
                    <color>#0B24BE</color>
                    <label>Incorrect Article/s</label>
                </value>
                <value>
                    <fullName>Incorrect articles picked</fullName>
                    <color>#FFCC33</color>
                    <label>Incorrect articles picked</label>
                </value>
                <value>
                    <fullName>Incorrect Carrier</fullName>
                </value>
                <value>
                    <fullName>Incorrect Components</fullName>
                    <color>#B6E32E</color>
                    <label>Incorrect Components</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <description>Used for service cloud. Is this case a complaint or not</description>
        <label>Complaint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>BY</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KZ</fullName>
                </value>
                <value>
                    <fullName>LB</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>PH</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>UA</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedByMe__c</fullName>
        <description>Help field used in list view to filter dynamically the cases the users has created</description>
        <formula>If( CreatedById = $User.Id,&quot;True&quot;,&quot;False&quot;)</formula>
        <inlineHelpText>DO NOT ADD TO PAGE LAYOUT</inlineHelpText>
        <label>Created By Me?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Country__c</fullName>
        <formula>TEXT(CreatedBy.User_Country__c)</formula>
        <label>Creator Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Order_Amount_Formula__c</fullName>
        <formula>Credit_Order_Amount__c</formula>
        <label>Credit Order Amount Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Order_Amount__c</fullName>
        <label>Credit Order Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Order_Number__c</fullName>
        <label>Credit Order Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Order_Total__c</fullName>
        <label>Credit Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Rebill__c</fullName>
        <label>Credit/Rebill</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Processing_Completed__c</fullName>
        <inlineHelpText>For tracking the Customer Service KPI Turn around time</inlineHelpText>
        <label>Customer Service Processing Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_Owner__c</fullName>
        <label>Date Assigned to Owner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Denial_Order_Tracking_Number__c</fullName>
        <label>Denial Order Tracking Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denial_Ship_Date__c</fullName>
        <inlineHelpText>Ship Date of the Return of Denied Products back to the Customer.</inlineHelpText>
        <label>Denial Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dev_environment_sync__c</fullName>
        <description>Used to keep track of changes to production that must be synced with the development environments including git-hub that we have.</description>
        <label>Dev environment sync</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dev Env sync required</fullName>
                </value>
                <value>
                    <fullName>Dev Env Sync completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Development_ID__c</fullName>
        <description>Applicable only for Digital Software Support</description>
        <inlineHelpText>Applicable only for Digital Software Support</inlineHelpText>
        <label>Development ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Product__c</fullName>
        <inlineHelpText>Indicate the product and version number which you supported</inlineHelpText>
        <label>Digital Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Line__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3D Endo 1.0</fullName>
                </value>
                <value>
                    <fullName>Aligners</fullName>
                </value>
                <value>
                    <fullName>Astra</fullName>
                </value>
                <value>
                    <fullName>Atlantis Editor</fullName>
                </value>
                <value>
                    <fullName>AWO Website</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Case viewer</fullName>
                </value>
                <value>
                    <fullName>CBCT &amp; 3rd Party Scans</fullName>
                </value>
                <value>
                    <fullName>CDR DICOM</fullName>
                </value>
                <value>
                    <fullName>CEREC</fullName>
                </value>
                <value>
                    <fullName>CMP</fullName>
                </value>
                <value>
                    <fullName>Computer</fullName>
                </value>
                <value>
                    <fullName>Connect</fullName>
                </value>
                <value>
                    <fullName>DBSWIN</fullName>
                </value>
                <value>
                    <fullName>Digital Lab</fullName>
                </value>
                <value>
                    <fullName>DS Core</fullName>
                </value>
                <value>
                    <fullName>DS Core Care</fullName>
                </value>
                <value>
                    <fullName>DS Core Create</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>File Catalyst</fullName>
                </value>
                <value>
                    <fullName>Hardware components</fullName>
                </value>
                <value>
                    <fullName>IDB</fullName>
                </value>
                <value>
                    <fullName>Image Integration</fullName>
                </value>
                <value>
                    <fullName>Implant Library</fullName>
                </value>
                <value>
                    <fullName>Ink</fullName>
                </value>
                <value>
                    <fullName>InLab</fullName>
                </value>
                <value>
                    <fullName>Installer Service</fullName>
                </value>
                <value>
                    <fullName>ISM</fullName>
                </value>
                <value>
                    <fullName>ISP Down</fullName>
                </value>
                <value>
                    <fullName>ISUS Viewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>Can be left empty. Please fill this in if there is a definite delivery date.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERP_Status_icon__c</fullName>
        <formula>Account.Movex_Status_indicator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Status icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Order_Ship_Date__c</fullName>
        <label>Exchange Order Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Order_Value__c</fullName>
        <description>added 2 decimals per this request
https://dentsplysirona.my.salesforce.com/5000J00001GH99c</description>
        <label>Exchange Order Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_Date__c</fullName>
        <description>To Be Deleted - removed all access 2019-09-13, used for CRM Requests</description>
        <inlineHelpText>To Be Deleted - Set by CRM Team, a value in this field means there is a plan to fulfill this commitment by given date</inlineHelpText>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Approvals_Completed__c</fullName>
        <inlineHelpText>This is populated by the Approval Process for calculating the KPI processing for Customer Service.</inlineHelpText>
        <label>Field Approvals Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FirstCallResolution__c</fullName>
        <formula>IF(ISPICKVAL(First_call_resolution__c, &apos;Yes&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Call Resolution (Checkbox)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstRealOwner_TF__c</fullName>
        <description>Technical field used to set the first real owner Id, used to assign email2case cases to their original owner instead to to the support user TFUS-000003410</description>
        <inlineHelpText>DO NOT ADD TO ANY LAYOUT</inlineHelpText>
        <label>First Real Owner</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_call_resolution__c</fullName>
        <label>First call resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FlowCase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is updated automatically from the Service cloud flow to tag this case as created by the flow</description>
        <label>Flow Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InboundEmailAfterCaseClosed__c</fullName>
        <description>This will be True if a closed case received a new email. TFUS-000001840</description>
        <formula>If ( LastInboundEmailDate__c &gt;  ClosedDate ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inbound Email After Case Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalEmail2Case__c</fullName>
        <description>TFUS-000003101 , Used to prevent sending email notifications when the email2case originated from a dentsplysirona internal email or Salesforce notification</description>
        <formula>IF(CONTAINS(SuppliedEmail,&quot;dentsply&quot;) || CONTAINS(SuppliedEmail,&quot;salesforce&quot;)|| CONTAINS(SuppliedEmail,&quot;noreply&quot;) || CONTAINS(SuppliedEmail,&quot;no-reply&quot;)|| CONTAINS(SuppliedEmail,&quot;wellspect&quot;)|| CONTAINS(SuppliedEmail,&quot;zhermack&quot;)|| CONTAINS(SuppliedEmail,&quot;microsoft&quot;),&quot;True&quot;,&quot;False&quot;)</formula>
        <label>Internal Email2Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Comment__c</fullName>
        <inlineHelpText>Visible only to the  Global CRM Team, use to add internal comments that shouldn&apos;t be shared with CRM users.</inlineHelpText>
        <label>Internal Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastEmailType__c</fullName>
        <description>Reflects the type of last Email Message related to this case. Updated through the EmailMessage default process. TFUS-000001840</description>
        <label>Last Email Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastInboundEmailDate__c</fullName>
        <description>The date/time of the last incoming email. TFUS-000001840</description>
        <inlineHelpText>The date/time of the last incoming email</inlineHelpText>
        <label>Last Inbound Email Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_CSat__c</fullName>
        <description>Last customer satisfaction value from the last survey. Filled automatically by the mapping of getfeedback.</description>
        <inlineHelpText>This information is coming from the last survey we sent to the contact and it represents his overall satisfaction about our customer service.</inlineHelpText>
        <label>Last CSat</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Csat_Value__c</fullName>
        <description>Last customer satisfaction value from the last survey. Filled automatically by the mapping of getfeedback.</description>
        <inlineHelpText>This information is coming from the last survey we sent to the contact and it represents his overall satisfaction about our customer service.</inlineHelpText>
        <label>Last Csat Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_NPS__c</fullName>
        <description>Last Net Promoter Score value from the last survey. Filled automatically by the mapping of getfeedback.</description>
        <inlineHelpText>This information is coming from the last survey we sent to the contact and reflects the contact willingness to recommend us to a peer. The score is from 1 to 10 and it means: The customer is: from 0-6 a Detractor, from 7-8 Passive, from 9-10 a Promoter.</inlineHelpText>
        <label>Last NPS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Survey_Update__c</fullName>
        <description>Date of the last survey. Filled automatically by the mapping of getfeedback.</description>
        <inlineHelpText>Date of the last survey sent to the customer</inlineHelpText>
        <label>Last Survey Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Comments_Change_on__c</fullName>
        <description>to be populated with the date/time of the latest changes on Comments, this helps to update the last modified date on the case

don&apos;t add to the layout</description>
        <label>Latest Comments Change on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <description>Used to fill in the Lot Number related to a Service Feedback case.</description>
        <label>Lot Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Legacy_ID__c</fullName>
        <formula>Account.MD_ERP_Legacy_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Materialise Legacy ID (SoftAdmin)</inlineHelpText>
        <label>MD Legacy ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_SBU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main SBU</label>
        <referenceTo>SBU_Information__c</referenceTo>
        <relationshipLabel>CRM Requests</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Movex__c</fullName>
        <formula>If(Source_Record__c !=&quot;&quot;, Source_Record__r.Customer_Id__c,Account.Movex__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Articles__c</fullName>
        <formula>HYPERLINK(&quot;/flow/Multiple_Articles_in_Cases?RelatedCase=&quot;&amp;Id, &quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multiple Articles</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Case__c</fullName>
        <description>Help field to filter my cases based on different criteria - CRM Requests</description>
        <formula>If( ($User.Id = CRM_Analyst__c ||   $User.Id =  Owner:User.Id ), &quot;True&quot;,&quot;False&quot;)</formula>
        <label>My Case?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_case_edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a field that get checked after a case has been approved in US.
Then we have a validation rule to allow only CS to edit the case</description>
        <label>NA: case edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_or_Replacement_Order__c</fullName>
        <label>New or Replacement Order</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <inlineHelpText>Set by CRM Team when to look at the request again, if not possible to close the Case directly</inlineHelpText>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Action_Age__c</fullName>
        <formula>IF(DATEVALUE(NOW()) = DATEVALUE(LastModifiedDate),  
(NOW()- LastModifiedDate) * 24,  
((CASE(MOD(DATEVALUE(LastModifiedDate) - DATE(1985,6,24),7),  
0 , CASE( MOD(DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),  
1 , CASE( MOD(DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),  
2 , CASE( MOD(DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),  
3 , CASE( MOD(DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),  
4 , CASE( MOD(DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),  
5 , CASE( MOD(DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),  
6 , CASE( MOD(DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),  
999)  
+ (FLOOR((DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate))/7)*5)  
- 2) * 9)  
+  
MAX((  
DATETIMEVALUE(TEXT(YEAR(DATEVALUE(LastModifiedDate))) &amp; &quot;-&quot; &amp; TEXT(MONTH(DATEVALUE(LastModifiedDate))) &amp; &quot;-&quot; &amp; TEXT(DAY(DATEVALUE(LastModifiedDate))) &amp; &quot; 08:00:00am&quot;) - LastModifiedDate + 1) * 24, 0))  
+  
MAX((NOW() -  
DATETIMEVALUE(TEXT(YEAR(DATEVALUE(NOW()))) &amp; &quot;-&quot; &amp; TEXT(MONTH(DATEVALUE(NOW()))) &amp; &quot;-&quot; &amp; TEXT(DAY(DATEVALUE(NOW()))) &amp; &quot; 16:00:00pm&quot;)) * 24, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Action Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objects_missing__c</fullName>
        <formula>IF(
(ContactId=&apos;&apos; &amp;&amp; SuppliedEmail != null &amp;&amp; NOT(Contains(SuppliedEmail,&apos;dentsplysirona.com&apos;))&amp;&amp; NOT(Contains(SuppliedEmail,&apos;misimplants.com&apos;))&amp;&amp; NOT(Contains(SuppliedEmail,&apos;zhermack.com&apos;))&amp;&amp; NOT(Contains(SuppliedEmail,&apos;heartland.com&apos;))) || (AccountId=&apos;&apos; &amp;&amp; SuppliedEmail != null &amp;&amp; (Contains(SuppliedEmail,&apos;dentsplysirona.com&apos;)|| Contains(SuppliedEmail,&apos;misimplants.com&apos;)|| Contains(SuppliedEmail,&apos;zhermack.com&apos;)|| Contains(SuppliedEmail,&apos;heartland.com&apos;))), &apos;Contact&apos;, /*for e2c*/ 




If(ContactId=&apos;&apos; &amp;&amp; text(Status)=&apos;New&apos;,&apos;hide flow&apos;,&apos;&apos;)) /*for not e2c*/</formula>
        <label>Objects missing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Details__c</fullName>
        <formula>Case ( Order_System__c, &quot;MOO&quot;, HYPERLINK(&quot;https://moomanagement.simplant.com/MOOMan/Admin/OrderOverview.aspx?SoftAdminOrderId=&quot;&amp;Order_Number__c, &quot;Click Here&quot;), 

&quot;DP&quot;, HYPERLINK(&quot;https://www.dentalplanit.com/Admin/AdminCaseDetails.aspx?CaseId=&quot;&amp;Order_Number__c, &quot;Click Here&quot;),

&quot;Movex&quot;, HYPERLINK(&quot;http://a3.astratech.net/a3DirectStart.asp?COMPONENT=OpenCollector_Invoice_0_Collector&amp;view=A&amp;selectionbox_Invoiceno=&amp;selectionbox_Orderno=&quot;&amp;Order_Number__c&amp;&quot;&amp;View=A&quot;, &quot;Click Here&quot;),

&quot;PWS&quot;,If (Account_Country__c=&quot;JP&quot;, HYPERLINK(&quot;http://pwsjp.dentsply.net/Reports/CustomReports/CustomReportsViewer.aspx?SystemReportID=10&amp;MOOid=&amp;OrderRef=&amp;Customer=&quot;&amp;Account.Name&amp;&quot;&amp;Patient=&amp;ReportViewer=HTML&quot;, &quot;Click Here&quot;),IF (Account_Country__c=&quot;US&quot; || Account_Country__c=&quot;CA&quot;,HYPERLINK(&quot;http://pwsus.internal.dentsply.net/Reports/CustomReports/CustomReportsViewer.aspx?SystemReportID=203&amp;MOOid=&amp;OrderRef=&amp;Customer=&quot;&amp;Account.Name&amp;&quot;&amp;Patient=&amp;ReportViewer=HTML&quot;,&quot;Click Here&quot;),HYPERLINK(&quot;http://pwsbeb/Reports/CustomReports/CustomReportsViewer.aspx?SystemReportID=167&amp;MOOid=&amp;OrderRef=&amp;Customer=&quot;&amp;Account.Name&amp;&quot;&amp;Patient=&amp;ReportViewer=HTML&quot;,&quot;Click Here&quot;))) ,&quot;&quot; )</formula>
        <inlineHelpText>This link will direct you to the related order details if the Order Number is filled in correctly</inlineHelpText>
        <label>Order Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Origin__c</fullName>
        <description>How did the customer sent the order

*Paper Form = Printed email, Fax, Sales rep</description>
        <inlineHelpText>How did the customer sent the order

*Paper Form = Printed email, Fax, Sales rep</inlineHelpText>
        <label>Order Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paper Form</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_System__c</fullName>
        <description>Select the related order system, DentalPlanit (DP), Materialise Online Ordering (MOO), PWS, or Movex</description>
        <inlineHelpText>Select the related order system, DentalPlanit (DP), Materialise Online Ordering (MOO), PWS, AX, or Movex</inlineHelpText>
        <label>Order System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>DP</fullName>
                </value>
                <value>
                    <fullName>MOO</fullName>
                </value>
                <value>
                    <fullName>Movex</fullName>
                </value>
                <value>
                    <fullName>PWS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consignment Order</fullName>
                </value>
                <value>
                    <fullName>Sample Order</fullName>
                </value>
                <value>
                    <fullName>Literature Order</fullName>
                </value>
                <value>
                    <fullName>Copy Invoice</fullName>
                </value>
                <value>
                    <fullName>Rewards Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Order_Date__c</fullName>
        <label>Original Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Approval_Status__c</fullName>
        <formula>IF( of_Article_Numbers__c=0,&quot;No Items Added&quot;, IF( of_Approved_Article_Numbers__c &lt; of_Article_Numbers__c, &quot;Not Fully Approved&quot;, IF(of_Approved_Article_Numbers__c = of_Article_Numbers__c, &quot;Fully Approved&quot;, &quot;For Review&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerName_TF__c</fullName>
        <description>Used to tag the owner name in Text to make it searchable in the List views. TFUS-000003561</description>
        <label>Owner Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>